# SortScrewsV2

./: .gitignore  README.md  collect.py  cook.py  infer.py  measure_inference_times.py  pyproject.toml
motor_control/: motor_control.ino  servo_control.ino
servo_control/: servo_control.ino
sort_screws_v2/: __init__.py  camera.py  collector.py  controller.py  data.py  dataset.py  locator.py  pre_labeler.py  sorter.py  utils.py
