[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sort-screws-v2"
version = "0.0.1"
description = "Screw Sorting Solution"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Project Neura", email = "central@projectneura.org" },
    { name = "Tianhao Fu", email = "terry.fu@projectneura.org" }
]
dependencies = ["mipcandy", "opencv-python", "transformers", "pyserial", "sort-screws"]

[tool.hatch.build.targets.sdist]
only-include = ["sort_screws_v2"]

[tool.hatch.build.targets.wheel]
packages = ["sort_screws_v2"]

[project.urls]
Homepage = "https://github.com/ATATC/SortScrewsV2"
Documentation = "https://github.com/ATATC/SortScrewsV2"
Repository = "https://github.com/ATATC/SortScrewsV2"
